// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`env schema fingerprint (behavior-preservation corpus) failure — normalized issues (path + code + message) Telegram channel enabled by username only 1`] = `
[
  {
    "code": "custom",
    "message": "TELEGRAM_BOT_TOKEN is required when the Telegram notifications channel is enabled",
    "path": "TELEGRAM_BOT_TOKEN",
  },
  {
    "code": "custom",
    "message": "WEBHOOK_TELEGRAM_SECRET is required when the Telegram notifications channel is enabled",
    "path": "WEBHOOK_SECRETS.telegram",
  },
]
`;

exports[`env schema fingerprint (behavior-preservation corpus) failure — normalized issues (path + code + message) empty env 1`] = `
[
  {
    "code": "invalid_type",
    "message": "Invalid input: expected string, received undefined",
    "path": "DATABASE_URL",
  },
  {
    "code": "invalid_type",
    "message": "Invalid input: expected string, received undefined",
    "path": "JWT_SECRET",
  },
  {
    "code": "invalid_type",
    "message": "Invalid input: expected string, received undefined",
    "path": "REDIS_URL",
  },
]
`;

exports[`env schema fingerprint (behavior-preservation corpus) failure — normalized issues (path + code + message) partial Google OAuth 1`] = `
[
  {
    "code": "custom",
    "message": "GOOGLE_CALLBACK_URL is required when configuring Google OAuth",
    "path": "GOOGLE_CALLBACK_URL",
  },
  {
    "code": "custom",
    "message": "GOOGLE_CLIENT_SECRET is required when configuring Google OAuth",
    "path": "GOOGLE_CLIENT_SECRET",
  },
]
`;

exports[`env schema fingerprint (behavior-preservation corpus) failure — normalized issues (path + code + message) production s3 without credentials 1`] = `
[
  {
    "code": "custom",
    "message": "STORAGE_ACCESS_KEY_ID is required when STORAGE_DRIVER is s3",
    "path": "STORAGE_ACCESS_KEY_ID",
  },
  {
    "code": "custom",
    "message": "STORAGE_BUCKET is required when STORAGE_DRIVER is s3",
    "path": "STORAGE_BUCKET",
  },
  {
    "code": "custom",
    "message": "STORAGE_SECRET_ACCESS_KEY is required when STORAGE_DRIVER is s3",
    "path": "STORAGE_SECRET_ACCESS_KEY",
  },
]
`;

exports[`env schema fingerprint (behavior-preservation corpus) failure — normalized issues (path + code + message) resend without an API key 1`] = `
[
  {
    "code": "custom",
    "message": "RESEND_API_KEY is required when EMAIL_PROVIDER is resend",
    "path": "RESEND_API_KEY",
  },
]
`;

exports[`env schema fingerprint (behavior-preservation corpus) success — resolved output (defaults applied, secrets redacted) development (minimal) 1`] = `
{
  "AI_APPROVAL_TTL_MS": 86400000,
  "AI_ARTIFACT_MAX_DOCUMENT_BYTES": 10485760,
  "AI_ARTIFACT_MAX_IMAGE_BYTES": 5242880,
  "AI_ARTIFACT_MAX_PARTS_PER_MESSAGE": 4,
  "AI_CATALOG_CACHE_TTL_SECONDS": 300,
  "AI_GUARDRAIL_INPUT_MODE": "flag",
  "AI_GUARDRAIL_MAX_INPUT_CHARS": 100000,
  "AI_REALTIME_HEARTBEAT_MS": 20000,
  "AI_REALTIME_MAX_CONNECTIONS": 10000,
  "AI_REALTIME_MAX_INFLIGHT_PUBLISH": 1000,
  "AI_REALTIME_MAX_PER_USER": 5,
  "AI_REALTIME_MAX_STREAM_LIFETIME_MS": 3600000,
  "AI_REALTIME_NAMESPACE": "",
  "AI_REALTIME_PUBLISH_TIMEOUT_MS": 1000,
  "AI_REALTIME_QUEUE_DEPTH": 16,
  "AI_REQUEST_TIMEOUT_MS": 60000,
  "AI_TOOL_EXECUTION_TIMEOUT_MS": 15000,
  "AI_TOOL_LOOP_MAX_STEPS": 8,
  "API_PORT": 5002,
  "BULL_BOARD_READ_ONLY": true,
  "CORS_ORIGIN": [
    "http://localhost:3002",
  ],
  "DATABASE_CONNECT_MS": 5000,
  "DATABASE_POOL_IDLE_MS": 30000,
  "DATABASE_POOL_MAX": 10,
  "DATABASE_POOL_WAITING_THRESHOLD": 5,
  "DATABASE_QUERY_TIMEOUT_MS": 30000,
  "DATABASE_STATEMENT_TIMEOUT_MS": 30000,
  "DATABASE_URL": "[redacted]",
  "EMAIL_FROM": "noreply@amcore.com",
  "EMAIL_PROVIDER": "mock",
  "EMAIL_VERIFICATION_EXPIRY_HOURS": 48,
  "ENABLE_BULL_BOARD": false,
  "FRONTEND_URL": "http://localhost:3002",
  "HEALTH_DISK_THRESHOLD_PERCENT": 0.9,
  "IDEMPOTENCY_FAIL_MODE": "open",
  "IDEMPOTENCY_LOCK_TTL_SECONDS": 30,
  "IDEMPOTENCY_REDIS_TIMEOUT_MS": 100,
  "IDEMPOTENCY_RETENTION_SECONDS": 86400,
  "JWT_ACCESS_EXPIRATION": "15m",
  "JWT_REFRESH_DAYS": 7,
  "JWT_SECRET": "[redacted]",
  "LOG_BODY_MAX_BYTES": 4096,
  "MEDIA_AVATAR_CACHE_CONTROL": "public, max-age=31536000, immutable",
  "MEDIA_AVATAR_MAX_PIXELS": 8000000,
  "MEDIA_MAX_HEIGHT": 8000,
  "MEDIA_MAX_PIXELS": 40000000,
  "MEDIA_MAX_SOURCE_BYTES": 5242880,
  "MEDIA_MAX_WIDTH": 8000,
  "MEDIA_SHARP_LIMIT_INPUT_PIXELS": 40000000,
  "METRICS_ENABLED": true,
  "NODE_ENV": "development",
  "NOTIFICATIONS_REALTIME_HEARTBEAT_MS": 20000,
  "NOTIFICATIONS_REALTIME_MAX_CONNECTIONS": 10000,
  "NOTIFICATIONS_REALTIME_MAX_INFLIGHT_PUBLISH": 1000,
  "NOTIFICATIONS_REALTIME_MAX_PER_USER": 5,
  "NOTIFICATIONS_REALTIME_MAX_STREAM_LIFETIME_MS": 3600000,
  "NOTIFICATIONS_REALTIME_NAMESPACE": "",
  "NOTIFICATIONS_REALTIME_PUBLISH_TIMEOUT_MS": 1000,
  "NOTIFICATIONS_REALTIME_QUEUE_DEPTH": 16,
  "PASSWORD_RESET_EXPIRY_MINUTES": 15,
  "PROCESS_ROLE": "all",
  "RBAC_ACLV_CACHE_TTL_MS": 0,
  "REDIS_URL": "[redacted]",
  "SLOW_QUERY_THRESHOLD_MS": 100,
  "STEP_UP_MAX_AGE_SECONDS": 600,
  "STORAGE_DRIVER": "local",
  "STORAGE_FORCE_PATH_STYLE": false,
  "STORAGE_HEALTH_ENABLED": false,
  "STORAGE_HEALTH_PROBE_KEY": "__storage_health_check__",
  "STORAGE_LOCAL_ROOT": "./uploads",
  "STORAGE_MAX_FILE_SIZE": 52428800,
  "STORAGE_REGION": "us-east-1",
  "STORAGE_SIGNED_URL_DEFAULT_TTL": 3600,
  "STORAGE_SIGNED_URL_MAX_TTL": 604800,
  "SUPPORT_EMAIL": "support@amcore.com",
  "TELEGRAM_API_BASE_URL": "https://api.telegram.org",
  "TRUST_PROXY": false,
  "WEBHOOK_REPLAY_DEDUPE_TTL_SECONDS": 300,
  "WEBHOOK_SECRETS": {},
  "WEBHOOK_TIMESTAMP_TOLERANCE_SECONDS": 300,
  "WORKER_CONCURRENCY": 1,
}
`;

exports[`env schema fingerprint (behavior-preservation corpus) success — resolved output (defaults applied, secrets redacted) dynamic webhook secrets (non-telegram) 1`] = `
{
  "AI_APPROVAL_TTL_MS": 86400000,
  "AI_ARTIFACT_MAX_DOCUMENT_BYTES": 10485760,
  "AI_ARTIFACT_MAX_IMAGE_BYTES": 5242880,
  "AI_ARTIFACT_MAX_PARTS_PER_MESSAGE": 4,
  "AI_CATALOG_CACHE_TTL_SECONDS": 300,
  "AI_GUARDRAIL_INPUT_MODE": "flag",
  "AI_GUARDRAIL_MAX_INPUT_CHARS": 100000,
  "AI_REALTIME_HEARTBEAT_MS": 20000,
  "AI_REALTIME_MAX_CONNECTIONS": 10000,
  "AI_REALTIME_MAX_INFLIGHT_PUBLISH": 1000,
  "AI_REALTIME_MAX_PER_USER": 5,
  "AI_REALTIME_MAX_STREAM_LIFETIME_MS": 3600000,
  "AI_REALTIME_NAMESPACE": "",
  "AI_REALTIME_PUBLISH_TIMEOUT_MS": 1000,
  "AI_REALTIME_QUEUE_DEPTH": 16,
  "AI_REQUEST_TIMEOUT_MS": 60000,
  "AI_TOOL_EXECUTION_TIMEOUT_MS": 15000,
  "AI_TOOL_LOOP_MAX_STEPS": 8,
  "API_PORT": 5002,
  "BULL_BOARD_READ_ONLY": true,
  "CORS_ORIGIN": [
    "http://localhost:3002",
  ],
  "DATABASE_CONNECT_MS": 5000,
  "DATABASE_POOL_IDLE_MS": 30000,
  "DATABASE_POOL_MAX": 10,
  "DATABASE_POOL_WAITING_THRESHOLD": 5,
  "DATABASE_QUERY_TIMEOUT_MS": 30000,
  "DATABASE_STATEMENT_TIMEOUT_MS": 30000,
  "DATABASE_URL": "[redacted]",
  "EMAIL_FROM": "noreply@amcore.com",
  "EMAIL_PROVIDER": "mock",
  "EMAIL_VERIFICATION_EXPIRY_HOURS": 48,
  "ENABLE_BULL_BOARD": false,
  "FRONTEND_URL": "http://localhost:3002",
  "HEALTH_DISK_THRESHOLD_PERCENT": 0.9,
  "IDEMPOTENCY_FAIL_MODE": "open",
  "IDEMPOTENCY_LOCK_TTL_SECONDS": 30,
  "IDEMPOTENCY_REDIS_TIMEOUT_MS": 100,
  "IDEMPOTENCY_RETENTION_SECONDS": 86400,
  "JWT_ACCESS_EXPIRATION": "15m",
  "JWT_REFRESH_DAYS": 7,
  "JWT_SECRET": "[redacted]",
  "LOG_BODY_MAX_BYTES": 4096,
  "MEDIA_AVATAR_CACHE_CONTROL": "public, max-age=31536000, immutable",
  "MEDIA_AVATAR_MAX_PIXELS": 8000000,
  "MEDIA_MAX_HEIGHT": 8000,
  "MEDIA_MAX_PIXELS": 40000000,
  "MEDIA_MAX_SOURCE_BYTES": 5242880,
  "MEDIA_MAX_WIDTH": 8000,
  "MEDIA_SHARP_LIMIT_INPUT_PIXELS": 40000000,
  "METRICS_ENABLED": true,
  "NODE_ENV": "development",
  "NOTIFICATIONS_REALTIME_HEARTBEAT_MS": 20000,
  "NOTIFICATIONS_REALTIME_MAX_CONNECTIONS": 10000,
  "NOTIFICATIONS_REALTIME_MAX_INFLIGHT_PUBLISH": 1000,
  "NOTIFICATIONS_REALTIME_MAX_PER_USER": 5,
  "NOTIFICATIONS_REALTIME_MAX_STREAM_LIFETIME_MS": 3600000,
  "NOTIFICATIONS_REALTIME_NAMESPACE": "",
  "NOTIFICATIONS_REALTIME_PUBLISH_TIMEOUT_MS": 1000,
  "NOTIFICATIONS_REALTIME_QUEUE_DEPTH": 16,
  "PASSWORD_RESET_EXPIRY_MINUTES": 15,
  "PROCESS_ROLE": "all",
  "RBAC_ACLV_CACHE_TTL_MS": 0,
  "REDIS_URL": "[redacted]",
  "SLOW_QUERY_THRESHOLD_MS": 100,
  "STEP_UP_MAX_AGE_SECONDS": 600,
  "STORAGE_DRIVER": "local",
  "STORAGE_FORCE_PATH_STYLE": false,
  "STORAGE_HEALTH_ENABLED": false,
  "STORAGE_HEALTH_PROBE_KEY": "__storage_health_check__",
  "STORAGE_LOCAL_ROOT": "./uploads",
  "STORAGE_MAX_FILE_SIZE": 52428800,
  "STORAGE_REGION": "us-east-1",
  "STORAGE_SIGNED_URL_DEFAULT_TTL": 3600,
  "STORAGE_SIGNED_URL_MAX_TTL": 604800,
  "SUPPORT_EMAIL": "support@amcore.com",
  "TELEGRAM_API_BASE_URL": "https://api.telegram.org",
  "TRUST_PROXY": false,
  "WEBHOOK_REPLAY_DEDUPE_TTL_SECONDS": 300,
  "WEBHOOK_SECRETS": {
    "github": "[redacted]",
    "stripe": "[redacted]",
  },
  "WEBHOOK_TIMESTAMP_TOLERANCE_SECONDS": 300,
  "WORKER_CONCURRENCY": 1,
}
`;

exports[`env schema fingerprint (behavior-preservation corpus) success — resolved output (defaults applied, secrets redacted) production with local storage 1`] = `
{
  "AI_APPROVAL_TTL_MS": 86400000,
  "AI_ARTIFACT_MAX_DOCUMENT_BYTES": 10485760,
  "AI_ARTIFACT_MAX_IMAGE_BYTES": 5242880,
  "AI_ARTIFACT_MAX_PARTS_PER_MESSAGE": 4,
  "AI_CATALOG_CACHE_TTL_SECONDS": 300,
  "AI_GUARDRAIL_INPUT_MODE": "flag",
  "AI_GUARDRAIL_MAX_INPUT_CHARS": 100000,
  "AI_REALTIME_HEARTBEAT_MS": 20000,
  "AI_REALTIME_MAX_CONNECTIONS": 10000,
  "AI_REALTIME_MAX_INFLIGHT_PUBLISH": 1000,
  "AI_REALTIME_MAX_PER_USER": 5,
  "AI_REALTIME_MAX_STREAM_LIFETIME_MS": 3600000,
  "AI_REALTIME_NAMESPACE": "",
  "AI_REALTIME_PUBLISH_TIMEOUT_MS": 1000,
  "AI_REALTIME_QUEUE_DEPTH": 16,
  "AI_REQUEST_TIMEOUT_MS": 60000,
  "AI_TOOL_EXECUTION_TIMEOUT_MS": 15000,
  "AI_TOOL_LOOP_MAX_STEPS": 8,
  "API_PORT": 5002,
  "BULL_BOARD_READ_ONLY": true,
  "CORS_ORIGIN": [
    "http://localhost:3002",
  ],
  "DATABASE_CONNECT_MS": 5000,
  "DATABASE_POOL_IDLE_MS": 30000,
  "DATABASE_POOL_MAX": 10,
  "DATABASE_POOL_WAITING_THRESHOLD": 5,
  "DATABASE_QUERY_TIMEOUT_MS": 30000,
  "DATABASE_STATEMENT_TIMEOUT_MS": 30000,
  "DATABASE_URL": "[redacted]",
  "EMAIL_FROM": "noreply@amcore.com",
  "EMAIL_PROVIDER": "mock",
  "EMAIL_VERIFICATION_EXPIRY_HOURS": 48,
  "ENABLE_BULL_BOARD": false,
  "FRONTEND_URL": "http://localhost:3002",
  "HEALTH_DISK_THRESHOLD_PERCENT": 0.9,
  "IDEMPOTENCY_FAIL_MODE": "open",
  "IDEMPOTENCY_LOCK_TTL_SECONDS": 30,
  "IDEMPOTENCY_REDIS_TIMEOUT_MS": 100,
  "IDEMPOTENCY_RETENTION_SECONDS": 86400,
  "JWT_ACCESS_EXPIRATION": "15m",
  "JWT_REFRESH_DAYS": 7,
  "JWT_SECRET": "[redacted]",
  "LOG_BODY_MAX_BYTES": 4096,
  "MEDIA_AVATAR_CACHE_CONTROL": "public, max-age=31536000, immutable",
  "MEDIA_AVATAR_MAX_PIXELS": 8000000,
  "MEDIA_MAX_HEIGHT": 8000,
  "MEDIA_MAX_PIXELS": 40000000,
  "MEDIA_MAX_SOURCE_BYTES": 5242880,
  "MEDIA_MAX_WIDTH": 8000,
  "MEDIA_SHARP_LIMIT_INPUT_PIXELS": 40000000,
  "METRICS_ENABLED": true,
  "NODE_ENV": "production",
  "NOTIFICATIONS_REALTIME_HEARTBEAT_MS": 20000,
  "NOTIFICATIONS_REALTIME_MAX_CONNECTIONS": 10000,
  "NOTIFICATIONS_REALTIME_MAX_INFLIGHT_PUBLISH": 1000,
  "NOTIFICATIONS_REALTIME_MAX_PER_USER": 5,
  "NOTIFICATIONS_REALTIME_MAX_STREAM_LIFETIME_MS": 3600000,
  "NOTIFICATIONS_REALTIME_NAMESPACE": "",
  "NOTIFICATIONS_REALTIME_PUBLISH_TIMEOUT_MS": 1000,
  "NOTIFICATIONS_REALTIME_QUEUE_DEPTH": 16,
  "PASSWORD_RESET_EXPIRY_MINUTES": 15,
  "PROCESS_ROLE": "all",
  "RBAC_ACLV_CACHE_TTL_MS": 0,
  "REDIS_URL": "[redacted]",
  "SLOW_QUERY_THRESHOLD_MS": 500,
  "STEP_UP_MAX_AGE_SECONDS": 600,
  "STORAGE_DRIVER": "local",
  "STORAGE_FORCE_PATH_STYLE": false,
  "STORAGE_HEALTH_ENABLED": false,
  "STORAGE_HEALTH_PROBE_KEY": "__storage_health_check__",
  "STORAGE_LOCAL_ROOT": "./uploads",
  "STORAGE_MAX_FILE_SIZE": 52428800,
  "STORAGE_REGION": "us-east-1",
  "STORAGE_SIGNED_URL_DEFAULT_TTL": 3600,
  "STORAGE_SIGNED_URL_MAX_TTL": 604800,
  "SUPPORT_EMAIL": "support@amcore.com",
  "TELEGRAM_API_BASE_URL": "https://api.telegram.org",
  "TRUST_PROXY": false,
  "WEBHOOK_REPLAY_DEDUPE_TTL_SECONDS": 300,
  "WEBHOOK_SECRETS": {},
  "WEBHOOK_TIMESTAMP_TOLERANCE_SECONDS": 300,
  "WORKER_CONCURRENCY": 1,
}
`;

exports[`env schema fingerprint (behavior-preservation corpus) success — resolved output (defaults applied, secrets redacted) production with s3 storage 1`] = `
{
  "AI_APPROVAL_TTL_MS": 86400000,
  "AI_ARTIFACT_MAX_DOCUMENT_BYTES": 10485760,
  "AI_ARTIFACT_MAX_IMAGE_BYTES": 5242880,
  "AI_ARTIFACT_MAX_PARTS_PER_MESSAGE": 4,
  "AI_CATALOG_CACHE_TTL_SECONDS": 300,
  "AI_GUARDRAIL_INPUT_MODE": "flag",
  "AI_GUARDRAIL_MAX_INPUT_CHARS": 100000,
  "AI_REALTIME_HEARTBEAT_MS": 20000,
  "AI_REALTIME_MAX_CONNECTIONS": 10000,
  "AI_REALTIME_MAX_INFLIGHT_PUBLISH": 1000,
  "AI_REALTIME_MAX_PER_USER": 5,
  "AI_REALTIME_MAX_STREAM_LIFETIME_MS": 3600000,
  "AI_REALTIME_NAMESPACE": "",
  "AI_REALTIME_PUBLISH_TIMEOUT_MS": 1000,
  "AI_REALTIME_QUEUE_DEPTH": 16,
  "AI_REQUEST_TIMEOUT_MS": 60000,
  "AI_TOOL_EXECUTION_TIMEOUT_MS": 15000,
  "AI_TOOL_LOOP_MAX_STEPS": 8,
  "API_PORT": 5002,
  "BULL_BOARD_READ_ONLY": true,
  "CORS_ORIGIN": [
    "http://localhost:3002",
  ],
  "DATABASE_CONNECT_MS": 5000,
  "DATABASE_POOL_IDLE_MS": 30000,
  "DATABASE_POOL_MAX": 10,
  "DATABASE_POOL_WAITING_THRESHOLD": 5,
  "DATABASE_QUERY_TIMEOUT_MS": 30000,
  "DATABASE_STATEMENT_TIMEOUT_MS": 30000,
  "DATABASE_URL": "[redacted]",
  "EMAIL_FROM": "noreply@amcore.com",
  "EMAIL_PROVIDER": "mock",
  "EMAIL_VERIFICATION_EXPIRY_HOURS": 48,
  "ENABLE_BULL_BOARD": false,
  "FRONTEND_URL": "http://localhost:3002",
  "HEALTH_DISK_THRESHOLD_PERCENT": 0.9,
  "IDEMPOTENCY_FAIL_MODE": "open",
  "IDEMPOTENCY_LOCK_TTL_SECONDS": 30,
  "IDEMPOTENCY_REDIS_TIMEOUT_MS": 100,
  "IDEMPOTENCY_RETENTION_SECONDS": 86400,
  "JWT_ACCESS_EXPIRATION": "15m",
  "JWT_REFRESH_DAYS": 7,
  "JWT_SECRET": "[redacted]",
  "LOG_BODY_MAX_BYTES": 4096,
  "MEDIA_AVATAR_CACHE_CONTROL": "public, max-age=31536000, immutable",
  "MEDIA_AVATAR_MAX_PIXELS": 8000000,
  "MEDIA_MAX_HEIGHT": 8000,
  "MEDIA_MAX_PIXELS": 40000000,
  "MEDIA_MAX_SOURCE_BYTES": 5242880,
  "MEDIA_MAX_WIDTH": 8000,
  "MEDIA_SHARP_LIMIT_INPUT_PIXELS": 40000000,
  "METRICS_ENABLED": true,
  "NODE_ENV": "production",
  "NOTIFICATIONS_REALTIME_HEARTBEAT_MS": 20000,
  "NOTIFICATIONS_REALTIME_MAX_CONNECTIONS": 10000,
  "NOTIFICATIONS_REALTIME_MAX_INFLIGHT_PUBLISH": 1000,
  "NOTIFICATIONS_REALTIME_MAX_PER_USER": 5,
  "NOTIFICATIONS_REALTIME_MAX_STREAM_LIFETIME_MS": 3600000,
  "NOTIFICATIONS_REALTIME_NAMESPACE": "",
  "NOTIFICATIONS_REALTIME_PUBLISH_TIMEOUT_MS": 1000,
  "NOTIFICATIONS_REALTIME_QUEUE_DEPTH": 16,
  "PASSWORD_RESET_EXPIRY_MINUTES": 15,
  "PROCESS_ROLE": "all",
  "RBAC_ACLV_CACHE_TTL_MS": 0,
  "REDIS_URL": "[redacted]",
  "SLOW_QUERY_THRESHOLD_MS": 500,
  "STEP_UP_MAX_AGE_SECONDS": 600,
  "STORAGE_ACCESS_KEY_ID": "[redacted]",
  "STORAGE_BUCKET": "my-bucket",
  "STORAGE_DRIVER": "s3",
  "STORAGE_FORCE_PATH_STYLE": false,
  "STORAGE_HEALTH_ENABLED": false,
  "STORAGE_HEALTH_PROBE_KEY": "__storage_health_check__",
  "STORAGE_LOCAL_ROOT": "./uploads",
  "STORAGE_MAX_FILE_SIZE": 52428800,
  "STORAGE_REGION": "us-east-1",
  "STORAGE_SECRET_ACCESS_KEY": "[redacted]",
  "STORAGE_SIGNED_URL_DEFAULT_TTL": 3600,
  "STORAGE_SIGNED_URL_MAX_TTL": 604800,
  "SUPPORT_EMAIL": "support@amcore.com",
  "TELEGRAM_API_BASE_URL": "https://api.telegram.org",
  "TRUST_PROXY": false,
  "WEBHOOK_REPLAY_DEDUPE_TTL_SECONDS": 300,
  "WEBHOOK_SECRETS": {},
  "WEBHOOK_TIMESTAMP_TOLERANCE_SECONDS": 300,
  "WORKER_CONCURRENCY": 1,
}
`;

exports[`env schema fingerprint (behavior-preservation corpus) success — resolved output (defaults applied, secrets redacted) test env 1`] = `
{
  "AI_APPROVAL_TTL_MS": 86400000,
  "AI_ARTIFACT_MAX_DOCUMENT_BYTES": 10485760,
  "AI_ARTIFACT_MAX_IMAGE_BYTES": 5242880,
  "AI_ARTIFACT_MAX_PARTS_PER_MESSAGE": 4,
  "AI_CATALOG_CACHE_TTL_SECONDS": 300,
  "AI_GUARDRAIL_INPUT_MODE": "flag",
  "AI_GUARDRAIL_MAX_INPUT_CHARS": 100000,
  "AI_REALTIME_HEARTBEAT_MS": 20000,
  "AI_REALTIME_MAX_CONNECTIONS": 10000,
  "AI_REALTIME_MAX_INFLIGHT_PUBLISH": 1000,
  "AI_REALTIME_MAX_PER_USER": 5,
  "AI_REALTIME_MAX_STREAM_LIFETIME_MS": 3600000,
  "AI_REALTIME_NAMESPACE": "",
  "AI_REALTIME_PUBLISH_TIMEOUT_MS": 1000,
  "AI_REALTIME_QUEUE_DEPTH": 16,
  "AI_REQUEST_TIMEOUT_MS": 60000,
  "AI_TOOL_EXECUTION_TIMEOUT_MS": 15000,
  "AI_TOOL_LOOP_MAX_STEPS": 8,
  "API_PORT": 5002,
  "BULL_BOARD_READ_ONLY": true,
  "CORS_ORIGIN": [
    "http://localhost:3002",
  ],
  "DATABASE_CONNECT_MS": 5000,
  "DATABASE_POOL_IDLE_MS": 30000,
  "DATABASE_POOL_MAX": 10,
  "DATABASE_POOL_WAITING_THRESHOLD": 5,
  "DATABASE_QUERY_TIMEOUT_MS": 30000,
  "DATABASE_STATEMENT_TIMEOUT_MS": 30000,
  "DATABASE_URL": "[redacted]",
  "EMAIL_FROM": "noreply@amcore.com",
  "EMAIL_PROVIDER": "mock",
  "EMAIL_VERIFICATION_EXPIRY_HOURS": 48,
  "ENABLE_BULL_BOARD": false,
  "FRONTEND_URL": "http://localhost:3002",
  "HEALTH_DISK_THRESHOLD_PERCENT": 0.9,
  "IDEMPOTENCY_FAIL_MODE": "open",
  "IDEMPOTENCY_LOCK_TTL_SECONDS": 30,
  "IDEMPOTENCY_REDIS_TIMEOUT_MS": 100,
  "IDEMPOTENCY_RETENTION_SECONDS": 86400,
  "JWT_ACCESS_EXPIRATION": "15m",
  "JWT_REFRESH_DAYS": 7,
  "JWT_SECRET": "[redacted]",
  "LOG_BODY_MAX_BYTES": 4096,
  "MEDIA_AVATAR_CACHE_CONTROL": "public, max-age=31536000, immutable",
  "MEDIA_AVATAR_MAX_PIXELS": 8000000,
  "MEDIA_MAX_HEIGHT": 8000,
  "MEDIA_MAX_PIXELS": 40000000,
  "MEDIA_MAX_SOURCE_BYTES": 5242880,
  "MEDIA_MAX_WIDTH": 8000,
  "MEDIA_SHARP_LIMIT_INPUT_PIXELS": 40000000,
  "METRICS_ENABLED": true,
  "NODE_ENV": "test",
  "NOTIFICATIONS_REALTIME_HEARTBEAT_MS": 20000,
  "NOTIFICATIONS_REALTIME_MAX_CONNECTIONS": 10000,
  "NOTIFICATIONS_REALTIME_MAX_INFLIGHT_PUBLISH": 1000,
  "NOTIFICATIONS_REALTIME_MAX_PER_USER": 5,
  "NOTIFICATIONS_REALTIME_MAX_STREAM_LIFETIME_MS": 3600000,
  "NOTIFICATIONS_REALTIME_NAMESPACE": "",
  "NOTIFICATIONS_REALTIME_PUBLISH_TIMEOUT_MS": 1000,
  "NOTIFICATIONS_REALTIME_QUEUE_DEPTH": 16,
  "PASSWORD_RESET_EXPIRY_MINUTES": 15,
  "PROCESS_ROLE": "all",
  "RBAC_ACLV_CACHE_TTL_MS": 0,
  "REDIS_URL": "[redacted]",
  "SLOW_QUERY_THRESHOLD_MS": 100,
  "STEP_UP_MAX_AGE_SECONDS": 600,
  "STORAGE_DRIVER": "memory",
  "STORAGE_FORCE_PATH_STYLE": false,
  "STORAGE_HEALTH_ENABLED": false,
  "STORAGE_HEALTH_PROBE_KEY": "__storage_health_check__",
  "STORAGE_LOCAL_ROOT": "./uploads",
  "STORAGE_MAX_FILE_SIZE": 52428800,
  "STORAGE_REGION": "us-east-1",
  "STORAGE_SIGNED_URL_DEFAULT_TTL": 3600,
  "STORAGE_SIGNED_URL_MAX_TTL": 604800,
  "SUPPORT_EMAIL": "support@amcore.com",
  "TELEGRAM_API_BASE_URL": "https://api.telegram.org",
  "TRUST_PROXY": false,
  "WEBHOOK_REPLAY_DEDUPE_TTL_SECONDS": 300,
  "WEBHOOK_SECRETS": {},
  "WEBHOOK_TIMESTAMP_TOLERANCE_SECONDS": 300,
  "WORKER_CONCURRENCY": 1,
}
`;
